Add vendor and super admin features

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 TELEGRAM_TOKEN=
 ADMIN_IDS=
+SUPER_ADMIN_IDS=
 MONERO_RPC_URL=
 ENCRYPTION_KEY=
 DATA_RETENTION_DAYS=30
+DEFAULT_COMMISSION_RATE=0.05
