--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python-telegram-bot = "^20.3"
 sqlmodel = "^0.0.8"
 PyNaCl = "^1.5"
 pydantic = "^1.10"
+pyotp = "^2.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4"
